Center nav section
Wrapped the nav in a container and aligned it within the center of the
containing section. Will use the same approach for other sections.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <section class="nav">
-        <div class="hero-logo">Header Logo</div>
-        <div class="nav-items">
-            <a class="hero-secondary" href="#">header link one</a>
-            <a class="hero-secondary" href="#">header link two</a>
-            <a class="hero-secondary" href="#">header link three</a>
+        <div class="nav-container">
+            <div class="hero-logo">Header Logo</div>
+            <div class="nav-items">
+                <a class="hero-secondary" href="#">header link one</a>
+                <a class="hero-secondary" href="#">header link two</a>
+                <a class="hero-secondary" href="#">header link three</a>
+            </div>
         </div>
     </section>
     <section class="hero"></section>
