Style hero section
Applied styling to the hero section and included a placeholder image.
The text does not line up with the nav when adjusting the viewport,
so I will need to address that next.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
             </div>
         </div>
     </section>
-    <section class="hero"></section>
+    <section class="hero">
+        <div class="hero-container">
+            <div class="hero-message">
+                <h1 class="hero-main">This website is awesome</h1>
+                <p class="hero-secondary">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+                <button class="btn-primary" href="#">Sign Up</button>
+            </div>
+            <div class="hero-image">this is a placeholder for an image</div>
+        </div>
+    </section>
     <section class="info"></section>
     <section class="quote"></section>
     <section class="cta"></section>
