--- a/index.html
+++ b/index.html
@@ -27,7 +27,29 @@
             <div class="hero-image">this is a placeholder for an image</div>
         </div>
     </section>
-    <section class="info"></section>
+    <section class="info">
+        <div class="info-container">
+            <div class="info-header">Some random information.</div>
+            <div class="info-cards">
+                <div class="info-card">
+                    <div class="info-image"></div>
+                    <div class="info-message">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info-card">
+                    <div class="info-image"></div>
+                    <div class="info-message">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info-card">
+                    <div class="info-image"></div>
+                    <div class="info-message">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info-card">
+                    <div class="info-image"></div>
+                    <div class="info-message">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="quote"></section>
     <section class="cta"></section>
     <section class="footer"></section>
