--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
             </div>
         </div>
     </section>
-    <section class="quote"></section>
+    <section class="quote">
+        <div class="quote-container">
+            <div class="quote-message">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is tha tit looks nice.
+            </div>
+            <div class="quote-attr">
+                -Thor, God of Thunder
+            </div>
+        </div>
+    </section>
     <section class="cta"></section>
     <section class="footer"></section>
 </body>
