Create cta and footer
Styled the cta section and added a simple footer section at the
bottom. The approach of using sections instead of divs was
likely unnecessary, but ultimately, the structure of the html
is about the same as if I had used divs.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@
             </div>
         </div>
     </section>
-    <section class="cta"></section>
-    <section class="footer"></section>
+    <section class="cta">
+        <div class="cta-container">
+            <div>
+                <div class="cta-header">Call to action! It's time!</div>
+                <div class="cta-message">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="btn-secondary">Sign up</button>
+        </div>
+    </section>
+    <section class="footer">
+        Copywrite © The Odin Project 2021
+    </section>
 </body>
 </html>
